---------------------------------------------------------------------------------------------------
Version: 17.1.6
Date: 2019-03-26
  Features:
    - Compatible with Xander Mod
---------------------------------------------------------------------------------------------------
Version: 17.1.5
Date: 2019-03-23
  Features:
    - Optional research added that unlocks the feature. Has a very temporary graphic.
  Info:
    - Updated changelog to 0.17 format
    - Returned mod versioning to correct order
    - Refactored code to be complaint with luacheck
    - Changed code to utilise my utily library
    - Removed work around for 0.16 surface filtered search API bug
    - Added support for script_raised events for better inter-mod compatibility

---------------------------------------------------------------------------------------------------
Version: 17.0.0
Date: 2019-03-03
  Features:
    - Requires and made code compatible with 0.17 Factorio
    - No function changes from the 0.16 Factorio (0.1.3) version

---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2019-01-13
  Bugfixes:
    - Power poles are blueprintable, no longer blocked by hidden lights
    - Power poles are fast replaceable, no longer blocked by hidden lights

---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2018-11-17
  Features:
    - Support for Picker Extended's Dolly feature.
    - Command to reset all of this mods entities on the map. Used for recovery after unsupported other mod actions. Command name: inbuilt-lighting-reset

---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2018-11-05
  Features:
    - Supports Creative Mode mod's instant deconstruction and blueprinting options.
    - Optional power usage per light in Watts. Defaults to 0. Has to be startup setting.