@@ -11,7 +11,7 @@ local function GenerateHiddenLight(tile, name)
     local hiddenLight = table.deepcopy(data.raw["lamp"]["small-lamp"])
     hiddenLight.name = "hiddenlight-" .. name
     hiddenLight.collision_mask = {}
-    hiddenLight.flags = {"not-blueprintable", "not-deconstructable", "placeable-off-grid", "not-on-map"}
+    hiddenLight.flags = {"not-blueprintable", "not-deconstructable", "placeable-off-grid", "not-on-map", "not-upgradable"}
     hiddenLight.selection_box = nil --makes a nice cross on the powered area rather than a default sized box
     hiddenLight.selectable_in_game = false
     hiddenLight.picture_off = {
@@ -35,7 +35,7 @@ local function GenerateHiddenLight(tile, name)
     end
     hiddenLight.energy_source.render_no_network_icon = false
     hiddenLight.energy_source.render_no_power_icon = false
-	hiddenLight.next_upgrade = nil --added to be compatible with Xander Mod
+    hiddenLight.next_upgrade = nil --added to be compatible with Xander Mod
     return hiddenLight
 end
 
@@ -52,7 +52,7 @@ local function GenerateHiddenLightEletricPole()
     local hiddenLightPole = table.deepcopy(data.raw["electric-pole"]["small-electric-pole"])
     hiddenLightPole.name = "hiddenlightpole"
     hiddenLightPole.collision_mask = {}
-    hiddenLightPole.flags = {"not-blueprintable", "not-deconstructable", "placeable-off-grid", "not-on-map"}
+    hiddenLightPole.flags = {"not-blueprintable", "not-deconstructable", "placeable-off-grid", "not-on-map", "not-upgradable"}
     hiddenLightPole.selectable_in_game = false
     hiddenLightPole.maximum_wire_distance = 0
     hiddenLightPole.supply_area_distance = 0.1
@@ -63,7 +63,7 @@ local function GenerateHiddenLightEletricPole()
         height = 1,
         direction_count = 4
     }
-	hiddenLightPole.next_upgrade = nil --added to be compatible with Xander Mod
+    hiddenLightPole.next_upgrade = nil --added to be compatible with Xander Mod
     data:extend({hiddenLightPole})
 end
 
